--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Noto+Sans+KR:wght@400&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@1.6.0/dist/lottie-player.js"></script>
 
 <style>
 /* 인라인 스타일 (추가된 부분만) */
@@ -29,7 +30,7 @@
 
 <div class="main">
 	<div id="visual">
-		<img src="img/index/main.png" alt="메인이미지">
+		<lottie-player src="img/index/main.json" background="transparent" speed="0.5" loop autoplay></lottie-player>
 	</div>
 </div>
 
